--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -1,14 +1,9 @@
-.main {
-  width: 90%;
-  padding: 20px 10px;
-  margin: 0px auto;
-  margin-top: 4rem;
-}
+.main,
 .greet-main {
   width: 90%;
   padding: 20px 10px;
   margin: 0px auto;
-  margin-top: 2rem;
+  margin-top: 0 !important;
 }
 
 .gretting-main {
@@ -84,6 +79,10 @@
   }
 }
 @media (max-width: 768px) {
+  .greet-main,
+  .main {
+    margin-top: 100px !important;
+  }
   .button-greeting-div {
     justify-content: space-around;
   }
@@ -123,7 +122,7 @@
   .main {
     width: 100% !important;
     padding: 4px 0 !important;
-    margin-top: 0 !important;
+    margin-top: 100px !important;
   }
   .greeting-main {
     display: flex;
